--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "@types/react-dom": "^15.5.0",
     "@types/react-router": "^4.0.6",
     "@types/react-router-dom": "^4.0.4",
+    "jquery": "^3.2.1",
     "material-ui": "^0.18.0",
+    "q": "^1.5.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
+    "@types/jquery": "^2.0.42",
+    "@types/q": "^1.0.0",
     "react-scripts-ts": "1.3.0"
   },
   "scripts": {
