--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@types/react-router-dom": "^4.0.4",
     "jquery": "^3.2.1",
     "material-ui": "^0.18.0",
+    "object-assign": "^4.1.1",
     "q": "^1.5.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "toastr": "^2.1.2"
   },
   "devDependencies": {
     "@types/jquery": "^2.0.42",
+    "@types/object-assign": "^4.0.30",
     "@types/q": "^1.0.0",
+    "@types/toastr": "^2.1.33",
     "react-scripts-ts": "1.3.0"
   },
   "scripts": {
