--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "q": "^1.5.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
     "toastr": "^2.1.2"
   },
   "devDependencies": {
     "@types/jquery": "^2.0.42",
     "@types/object-assign": "^4.0.30",
     "@types/q": "^1.0.0",
+    "@types/react-redux": "^4.4.40",
     "@types/toastr": "^2.1.33",
     "react-scripts-ts": "1.3.0"
   },
